<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LoginActivity" >

    <!-- Login progress -->

    <LinearLayout
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone" >

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/login_status_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif-light"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:id="@+id/login_div"
            android:layout_width="fill_parent"
            android:layout_height="276dp"
            android:layout_margin="15dip"
            android:background="@drawable/background_login_div_bg"
            android:padding="15dip" >

            <!-- 账号 -->

            <TextView
                android:id="@+id/login_user_input"
                style="@style/normalText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="5dp"
                android:text="@string/login_label_username" />

            <EditText
                android:id="@+id/email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_user_input"
                android:hint="@string/login_username_hint"
                android:inputType="textEmailAddress"
                android:singleLine="true" />
            <!-- 密码 text -->

            <TextView
                android:id="@+id/login_password_input"
                style="@style/normalText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/email"
                android:layout_marginTop="3dp"
                android:text="@string/login_label_password" />

            <EditText
                android:id="@+id/password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_password_input"
                android:hint="@string/login_password_hint"
                android:inputType="textPassword"
                android:singleLine="true" />
            
                    
        <!-- 登录button -->
        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/password"
            android:layout_below="@+id/password"
            android:layout_marginTop="16dp"
            android:background="@drawable/blue_button"
            android:text="@string/login_label_signin" />
        
		<!-- 注册链接 -->
        <TextView
            android:id="@+id/register_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/sign_in_button"
            android:layout_below="@+id/sign_in_button"
            android:layout_marginTop="20dp"
            android:text="@string/login_register_link"
            android:textColor="#888"
            android:textColorLink="#FF0066CC" />
            
        </RelativeLayout>

    </ScrollView>

</merge>